# zephyr

samples/bluetooth/beacon_relay/: README.rst
samples/bluetooth/beacon_relay/advertiser/: prj.conf  sample.yaml
samples/bluetooth/beacon_relay/advertiser/src/: main.c
samples/bluetooth/beacon_relay/scanner/: CMakeLists.txt
samples/bluetooth/beacon_relay/scanner/src/: main.c
samples/bluetooth/ieddy/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/bluetooth/ieddy/src/: main.c
samples/bluetooth/observe_eddy/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/bluetooth/observe_eddy/advertiser/: CMakeLists.txt  prj.conf
samples/bluetooth/observe_eddy/advertiser/src/: main.c
samples/bluetooth/observe_eddy/src/: main.c
